# zoidbot

./: README.md
circle_detection/: CMakeLists.txt  LICENSE  package.xml
circle_detection/include/: CTransformation.h  FindCircle.h
circle_detection/launch/: multi_cam_circle_detection.launch
circle_detection/msg/: detection_results.msg  detection_results_array.msg
circle_detection/src/: CCircleDetect.cpp  CRawImage.cpp  CTransformation.cpp  FindCircle.cpp
circle_detection/templates/: generate_circle.py
interactive_face/: CMakeLists.txt  package.xml
interactive_face/src/: move.py  zoidberg.py
pointing_hand/: CMakeLists.txt  package.xml
pointing_hand/src/: pointing.py
zoidbot_tools/: CMakeLists.txt  package.xml  setup.py
zoidbot_tools/launch/: camera.launch  setup_cameras.launch  whycon.launch
zoidbot_tools/scripts/: baxter_grab.py  clean_table.py  demo.py  grab.py  robot_start.sh  start.sh  whycon_transform.py
zoidbot_tools/src/zoidbot_tools/: io_interface.py  player.py  puppet.py  recorder.py
