<?xml version="1.0"?>
<package>
  <name>zoidbot_tools</name>
  <version>0.0.0</version>
  <description>The zoidbot_tools package</description>

  <maintainer email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</maintainer>

  <author>Jaime Pulido Fentanes</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>baxter_interface</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>